# DC_bot

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  BACKUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_ORACLE.md  DOCKER.md  Dockerfile  Dockerfile.dashboard  FAQ.md  INSTALL.md  LICENSE  README.md  RESTORE.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  UNINSTALL.md  UPDATE.md  alembic.ini  docker-compose.yml  fix_all.py  fix_final.py  fix_last.py  fix_remaining.py  fix_ruff.py  fix_ruff_manual.py  fix_syntax.py  fix_tests.py  install.sh  parse_ci_log.py  pyproject.toml  requirements.txt  ruff_errors.json  scratch_test.py  test_failures.txt  update.sh
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  2696110c250a_add_module_7_verification_models.py  b9aff498daf1_add_module_8_ticket_models.py  ca13cfbe5c35_add_modules_9_to_12_models.py
bot/: __init__.py  __main__.py  config.py  main.py
bot/cogs/: __init__.py  enterprise_cog.py  ticket_cog.py  verification_cog.py
bot/core/: __init__.py  bot.py
bot/database/: __init__.py  engine.py
bot/services/: __init__.py  history_service.py  logging_service.py  moderation_service.py  punishment_service.py  redis_service.py
bot/tasks/: global_scheduler.py  ticket_automations.py  verification_cleanup.py
bot/ui/: reaction_views.py  ticket_views.py  verification_views.py
bot/utils/: __init__.py  constants.py  embed_builder.py  localization.py  logger.py  (+3 more)
deploy/: backup.sh  backup_db.sh  discord-bot.service  discord-dashboard.service  restore.sh  uninstall.sh  verify.sh
docs/: automod_configuration.md  dashboard_guide.md  deployment_guide.md  enterprise_guide.md  logging_guide.md  security_guide.md  ticket_guide.md  verification_guide.md
nginx/: nginx.conf
scripts/: start.py
tests/: __init__.py  conftest.py  test_automod_schemas.py  test_automod_services.py  test_cogs_automod.py  test_cogs_logging.py  test_cogs_moderation.py  test_cogs_security.py  test_dashboard_auth.py  test_dashboard_rbac.py  test_database.py  test_embed_builder.py  test_enterprise_backup.py  test_enterprise_roles.py  test_enterprise_xp.py  test_logging_schemas.py  test_logging_services.py  test_permissions.py  test_raid_detection.py  test_redis_service.py  test_risk_engine.py  test_security_schemas.py  test_services.py  test_tickets_assignment.py  test_tickets_providers.py  test_tickets_state.py  test_time_parser.py  test_verification_providers.py  test_verification_risk.py  test_verification_services.py
(+151 files in other folders)
